Add support for inventories with new classic stock support
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1417 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/financialyear.html.haml
+++ b/app/views/accountancy/financialyear.html.haml
@@ -1,5 +1,6 @@
 =toolbar do |t|
-  -t.print :financialyear, :id=>@financialyear.id
+  -t.print :balance_sheet, :id=>@financialyear.id
+  -t.print :income_statement, :id=>@financialyear.id
 
 %h2= tc 'general_informations'
 %table
