--- a/app/views/management/inventory_update.html.haml
+++ b/app/views/management/inventory_update.html.haml
@@ -1,11 +1,9 @@
 -form_tag() do
   =formalize do |f|
     - f.title :inventory
-    - f.field :inventory, :changes_reflected
-  =dyta(:inventory_lines_update)
-  =formalize do |f|
-    - f.field :inventory, :user_id, :choices=>@current_company.users.collect{|e| [e.label, e.id]}
+    - f.field :inventory, :responsible_id, :choices=>@current_company.users.collect{|e| [e.label, e.id]}
     - f.field :inventory, :comment, :field=>:textarea
+  =dyta(:inventory_lines_update)
   .actions
     =link_to tg(:previous), :action=>:inventories
     =submit_tag(tc('validate'), :action=>:inventory_update)
