--- a/app/views/management/stocks.html.haml
+++ b/app/views/management/stocks.html.haml
@@ -1,5 +1,7 @@
 -if @current_company.stocks.size > 0
   =render :partial=>"location_choice"
+  =toolbar do |t|
+    -t.print :stocks, :p0=>Date.today.to_s
   =dyta :stocks
 -else
   %h2{:style=>'text-align: center;'}=tc(:no_product_stocks)
