--- a/app/views/management/embankment.html.haml
+++ b/app/views/management/embankment.html.haml
@@ -1,5 +1,5 @@
 =toolbar do |t|
-  -t.print :embankment, :id=>@embankment.id
+  -t.print :embankment, :p0=>@embankment.id
 
 
 %p{:style=>'padding: 20px 0 0 0;'}=dyta :embankment_payments
