--- a/app/views/company/document_templates.html.haml
+++ b/app/views/company/document_templates.html.haml
@@ -1,5 +1,5 @@
 =toolbar do |t|
   -t.link :document_template_create
-  -t.link :document_templates_load
+  -t.link :document_templates_load, {}, :confirm=>tg(:are_you_sure)
 
 =dyta :document_templates
