Fixes bug on embankment and payments
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1419 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_purchase_order_line_form.html.haml
+++ b/app/views/management/_purchase_order_line_form.html.haml
@@ -11,5 +11,5 @@
     -f.field :purchase_order_line, :location_id, :choices=>@current_company.locations.collect{|x| [x.name, x.id]}
   -f.field :purchase_order_line, :tracking_serial
 
-=observe_field "purchase_order_line_product_id", :url=>{:action => :price_find, :entity_id=>@purchase_order_line.order.supplier_id}, :frequency => 0.25, :with=>"purchase_order_line_product_id"
+=observe_field "purchase_order_line_product_id", :url=>{:action => :price_find, :entity_id=>@purchase_order_line.order.supplier_id}, :frequency => 0.25, :with=>"purchase_order_line_product_id", :loading=>"onLoading()", :loaded=>"onLoaded()"
 =#observe_field "purchase_order_line_price_id", :url=>{:action => :price_find}, :frequency => 0.25, :with=>"purchase_order_line_price_id"
