--- a/app/views/management/purchase_order_lines.html.haml
+++ b/app/views/management/purchase_order_lines.html.haml
@@ -2,7 +2,7 @@
 
 =toolbar do |t|
   -if @purchase_order.lines.size > 0 
-    -t.link :purchase_order_print, :id=>@purchase_order.id 
+    -t.print :purchase_order, :p0=>@purchase_order.id 
 %h2=tc :general
 = toolbar do |t|
   - if @purchase_order.editable
