Begins to normalize error messages managing with I18n and rename entries
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1427 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/journal_close.html.haml
+++ b/app/views/accountancy/journal_close.html.haml
@@ -2,7 +2,7 @@
   =formalize do |f|
     - f.error :journal
     - f.field :journal, :id, :choices => @journals.collect {|j| [j.name, j.id]}
-    - f.field :journal, :closed_on, :choices => @journal_records
+    - f.field :journal, :closed_on, :choices => @journal.closures
   .actions
     =submit_tag(tc('close'))
     =link_to_back
