--- a/app/views/management/invoice_cancel.html.haml
+++ b/app/views/management/invoice_cancel.html.haml
@@ -8,7 +8,7 @@
           %li= error.to_s
 
 
-=error_messages_for('invoice', :object=>@credit) if @credit
+=error_messages('invoice', :object=>@credit) if @credit
 
 
 - form_tag() do
