--- a/app/views/accountancy/_bank_account_form.html.haml
+++ b/app/views/accountancy/_bank_account_form.html.haml
@@ -35,4 +35,4 @@
     }
   }
   banToggle($('bank_account_mode_iban'))
-  $('bank_account_mode_iban').checked = "checked"
+-#  $('bank_account_mode_iban').checked = "checked"
