--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -33,7 +33,7 @@ table.dyta th, table.dyta td.empty, table.dyta td.procedures { border-top: 1px s
 table.dyta th, table.dyta td { border-left: 1px solid #BACFE6; border-right: 1px solid #BACFE6; }
 table.dyta tr      th.footer { clear:both; border-top:1px solid #BACFE6; padding: 0px 3px; background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; }
 table.dyta tr      th.footer div.export { padding: 2px; float:left;}
-table.dyta tr      th.footer div.export a { padding: 0 0 0 14px; background: url(../images/buttons/export.png) left center no-repeat;}
+table.dyta tr      th.footer div.export a { padding: 0 2px 0 14px; margin: 0 2px; background: url(../images/buttons/spreadsheet.png) left center no-repeat;}
 table.dyta tr      th.footer div.pagination { padding: 2px; float:right;}
 table.dyta tr      th.footer div.pagination * { padding:2px 4px; }
 table.dyta tr      th.footer div.pagination span.current { font-weight:bold; color: black; }
