Fixes journal close process
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1432 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/journal_close.html.haml
+++ b/app/views/accountancy/journal_close.html.haml
@@ -1,9 +1,8 @@
 - form_tag do
   =formalize do |f|
     - f.error :journal
-    - f.field :journal, :id, :choices => @journals.collect {|j| [j.name, j.id]}
-    - f.field :journal, :closed_on, :choices => @journal.closures
+    - f.title :select_closure_date
+    - f.field :journal, :closed_on, :choices => @journal.closures.collect{|d| [::I18n.l(d), d]}
   .actions
     =submit_tag(tc('close'))
-    =link_to_back
-=observe_field "journal_id", :frequency => 0.25, :url=>{:action=>:journals_records}, :update=>:journal_closed_on, :with => "'journal_select=' + escape(value)"
+    =link_to_back(:label=>:cancel)
