--- a/public/templates/tekyla/stylesheets/screen.css
+++ b/public/templates/tekyla/stylesheets/screen.css
@@ -1,4 +1,4 @@
-* {margin:0; padding:0; font-family: Arial, sans-serif;}
+* {margin:0; padding:0; font-family: sans-serif;}
 /* BLUE EKYLIBRE : #3060FF */
 html {background: #FFF;}
 fieldset { border:1px solid #CCC; padding:  8px 0px 0px; margin: 1px 1px 8px; background: url(../images/columns.png) repeat-x top; }
