--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -13,20 +13,16 @@
 #subscription_number=render :partial=>"subscription_number"
 #subscription_date=render :partial=>"subscription_period"
 
--if @current_user.can?(:give_discounts_on_sale) and false
-  =formalize do |f|
-    -f.title :give_discount
-    -f.field tc("discount.mode"), "[:none, :percent, :amount, :amount_with_taxes]"
-    -f.field tc("discount.size"), ":discount_size"
-    -f.field tc("discount.percent_difference"), "456"
-    -f.field tc("discount.amount_difference"), ""
-    -f.field tc("discount.amount_with_taxes_difference"), ""
-
--if @current_user.can?(:change_prices_on_sale) and false
+-if @current_user.can?(:change_prices_on_sale)
   =formalize do |f|
     -f.title :change_price
     -f.field :sale_order_line, :price_amount
     -f.field :sale_order_line, :tax_id, :choices=>@current_company.taxes.find_all_by_deleted(false).collect{|x| [x.name, x.id]}
+
+-if @current_user.can?(:give_discounts_on_sale)
+  =formalize do |f|
+    -f.title :give_discount
+    -f.field :sale_order_line, :discount, :size=>5
 
 
 =observe_field("sale_order_line_price_id", :url=>{:action => :subscription_find}, :frequency => 0.25, :with=>"sale_order_line_price_id")
